# supersigma2-errorcodes

./: README.md  pyproject.toml  test_sigma.py
sigma/: __init__.py  cli.py  errors.py  parser.py
sigma_errorcodes/: __main__.py  errors.py
