[tool.poetry]
name = "supersigma2-errorcodes"
version = "1.0"
description = "A parser for DMC SuperSigma2 error codes"
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "sigma" },
]

[tool.poetry.scripts]
sigma = "sigma.cli:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
